Fixed alignment with Stars and Date

--- a/WeiYeWork/ReviewsComments.css
+++ b/WeiYeWork/ReviewsComments.css
@@ -302,7 +302,8 @@ body {
     }
 
     .information {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         align-items: flex-start;
         gap: 4px;
     }
